<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paul.singlescreenapp.MainActivity"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient4"
    >

    <LinearLayout
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:alpha=".75"
            android:background="@drawable/gradient6"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars = "vertical"
            android:scrollbarStyle="insideInset"
            android:layout_width="wrap_content"
            android:layout_height="0dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/palaceDescription"
                android:id="@+id/imgview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </ScrollView>


        <ImageView
            android:alpha=".95"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/palat1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>


        <TextView
            android:gravity="center_horizontal"
            android:text="@string/Monday"
            android:layout_marginTop="15dp"
            android:alpha=".65"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/gradient6"/>

    </LinearLayout>
    <LinearLayout

        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">




        <Button
            android:layout_marginRight="20dp"
            android:id="@+id/youtubeIcon"
            android:contentDescription="@string/yt"
            android:background="@drawable/yt"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            />
        <Button

        android:layout_marginRight="20dp"
            android:id="@+id/facebookIcon"
        android:background="@drawable/fb"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="50dp"
        />

        <Button
            android:contentDescription="@string/tw"
            android:layout_marginRight="20dp"
            android:id="@+id/twitterIcon"
            android:background="@drawable/twitter"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            />

        <Button
            android:contentDescription="@string/mp"
            android:layout_marginRight="20dp"
            android:id="@+id/maps"
            android:background="@drawable/maps"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            />

        <Button
android:background="@drawable/inform"
            android:id="@+id/information"
            android:contentDescription="@string/info"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
             />




    </LinearLayout>

</RelativeLayout>